# OxHost

./: .gitignore  Cargo.toml  README.md
cache/: c_index.html  c_style.css  c_theme.js
public/: index.html  style.css  theme.js
src/: main.rs  mime_types.rs
