[package]
name = "oxhost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Compile dependencies with opt-level=3
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# anyhow = "1.0.71"
# arc-swap = "1.6.0"
axum = { version = "0.6.18", features = ["http2", "macros"] }
bytesize = "1.2.0"
clap = { version = "4.3.0", features = ["derive", "env", "color", "cargo", "wrap_help"] }
dashmap = "5.4.0"
flate2 = { version = "1.0.26", default-features = false, features = ["zlib-ng"] }
md-5 = "0.10.5"
minify-html = "0.11.1"
minify-js = "0.5.6"
notify = { version = "6.0.0", default-features = false, features = ["mio", "macos_kqueue"] }
notify-deb = {package = "notify-debouncer-full", version = "0.1", default-features=false}
os_str_bytes = "6.5.0"
path-clean = "1.0.1"
phf = { version = "0.11.1", features = ["macros"] }
sha2 = { version = "0.10.6", features = ["asm"] }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros", "sync", "mio", "net", "time", "fs"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1.37"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.17", features = ["tracing"] }
walkdir = "2.3.3"
